[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "httpx_rotating"
version = "0.0.1"
authors = [{ name = "Andrey Zin", email = "andrey@zin.pw" }]
description = "httpx transport with auto proxy switch "
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["httpx >= 0.22.0"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/andreyzin/httpx_rotating_proxy"
Issues = "https://github.com/andreyzin/httpx_rotating_proxy/issues"
